syntax = "proto3";

package supply_material;
option java_package = "com.example.supply_material";
option java_multiple_files = true;

message Truck {
  int32 depth = 1;
  int32 width = 2;
  int32 length = 3;
  int32 requiredDrivers = 4;
}

message Invoice {
  string orderId = 1;
  double price = 2;
}





message GetRawMaterialsRequest {
  repeated string rawMaterialId = 1;
}

message GetRawMaterialsResponse {
  repeated string rawMaterialId = 1;
  Truck truck = 2;
  Invoice invoice =3;
}


service SupplyMaterial {
  rpc GetRawMaterials(stream GetRawMaterialsRequest) returns (stream GetRawMaterialsResponse) {};
}
